@@ -321,7 +321,7 @@
 <addon  id="script.module.dmd-czech.common" 
         name="dmd-czech common python modules" 
         provider-name="Jiri Vyhnalek" 
-        version="1.1">
+        version="1.2">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
   </requires>
@@ -337,11 +337,11 @@
 </addon>
 <addon id="plugin.video.dmd-czech.filmyczcom"
        name="Filmy CZ"
-       version="0.9"
+       version="1.0"
        provider-name="Ivo Brhel">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-    <import addon="script.module.dmd-czech.common" version="1.1"/>
+    <import addon="script.module.dmd-czech.common" version="1.2"/>
   </requires>
   <extension point="xbmc.python.pluginsource" library="default.py">
     <provides>video</provides>
